fix:mobile optimizing dialogs, scrolling dialogs when screen too small, collection progress displaying, no mainnav gestures in single view

--- a/Frontend/src/styles/dialogs.scss
+++ b/Frontend/src/styles/dialogs.scss
@@ -29,8 +29,9 @@ $cardActionHeight:77px;
   margin-left:-250px!important;
 }
 
-.card-content{
+.card .card-content{
   height: calc(100% - #{$cardActionHeight});
+  margin-bottom: 0;
 }
 .card .card-action {
   display: flex;
